--- a/poem.html
+++ b/poem.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <h1> The Lorax </h1>
- <h2> By Dr. Seuss </h2>
- <style>
-    body {
-        text-align: center;
-        background-color: lightblue;
-    }
-    h1 {
-        color: white;
-        text-align: center;
-    }
-    h2 {
-        color: white;
-        text-align: center;
-        font-family: Arial, sans-serif;
+        <meta charset="UTF-8">
+        <title> Poem </title>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    UNLESS someone like you cares a whole awful lot, nothing is going to get better. It's not.
+    <h1> The Lorax </h1>
+ <h2> By Dr. Seuss </h2>
+    <p>UNLESS someone like you cares a whole awful lot, nothing is going to get better. It's not.</p>
 </body>
 </html>
